--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -2,13 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 	<item	android:id="@+id/test"
 			android:title="TEST"
-			android:icon="@drawable/gwheels"
-			android:showAsAction="ifRoom"
+			android:actionMenuTextColor="#F00"
+			android:icon="@drawable/open"
+			android:showAsAction="ifRoom|withText"
+			android:uiOptions="splitActionBarWhenNarrow"
 	/>
-	<item 	android:id="@+id/connect"
+	<item	android:id="@+id/connect"
 			android:title="connect"
+			android:icon="@drawable/open"
 	/>
 	<item	android:id="@+id/setting"
 			android:title="setting"
+			android:icon="@drawable/history"
 	/>
 </menu>
